--- a/Agricola_Front/PersonalField/field_frame.ui
+++ b/Agricola_Front/PersonalField/field_frame.ui
@@ -97,7 +97,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QPushButton" name="btn_fence_0">
+          <widget class="QPushButton" name="btn_fence_h00">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -120,7 +120,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_1">
+          <widget class="QPushButton" name="btn_fence_h01">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -149,7 +149,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_2">
+          <widget class="QPushButton" name="btn_fence_h02">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -172,7 +172,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_3">
+          <widget class="QPushButton" name="btn_fence_h03">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -195,7 +195,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_4">
+          <widget class="QPushButton" name="btn_fence_h04">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -232,7 +232,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          <number>0</number>
         </property>
         <item>
-         <widget class="QPushButton" name="btn_fence_5">
+         <widget class="QPushButton" name="btn_fence_v00">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -280,7 +280,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_6">
+         <widget class="QPushButton" name="btn_fence_v01">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -328,7 +328,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_7">
+         <widget class="QPushButton" name="btn_fence_v02">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -376,7 +376,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_8">
+         <widget class="QPushButton" name="btn_fence_v03">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -424,7 +424,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_9">
+         <widget class="QPushButton" name="btn_fence_v04">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -472,7 +472,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_10">
+         <widget class="QPushButton" name="btn_fence_v05">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -529,7 +529,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           <number>0</number>
          </property>
          <item>
-          <widget class="QPushButton" name="btn_fence_11">
+          <widget class="QPushButton" name="btn_fence_h10">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -552,7 +552,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_12">
+          <widget class="QPushButton" name="btn_fence_h11">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -581,7 +581,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_13">
+          <widget class="QPushButton" name="btn_fence_h12">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -604,7 +604,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_14">
+          <widget class="QPushButton" name="btn_fence_h13">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -627,7 +627,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_15">
+          <widget class="QPushButton" name="btn_fence_h14">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -664,7 +664,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          <number>0</number>
         </property>
         <item>
-         <widget class="QPushButton" name="btn_fence_16">
+         <widget class="QPushButton" name="btn_fence_v10">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -706,7 +706,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_17">
+         <widget class="QPushButton" name="btn_fence_v11">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -748,7 +748,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_18">
+         <widget class="QPushButton" name="btn_fence_v12">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -790,7 +790,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_19">
+         <widget class="QPushButton" name="btn_fence_v13">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -832,7 +832,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_20">
+         <widget class="QPushButton" name="btn_fence_v14">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -874,7 +874,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_21">
+         <widget class="QPushButton" name="btn_fence_v15">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -925,7 +925,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           <number>0</number>
          </property>
          <item>
-          <widget class="QPushButton" name="btn_fence_22">
+          <widget class="QPushButton" name="btn_fence_h20">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -948,7 +948,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_23">
+          <widget class="QPushButton" name="btn_fence_h21">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -977,7 +977,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_24">
+          <widget class="QPushButton" name="btn_fence_h22">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1000,7 +1000,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_25">
+          <widget class="QPushButton" name="btn_fence_h23">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1023,7 +1023,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_26">
+          <widget class="QPushButton" name="btn_fence_h24">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1057,7 +1057,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          <number>0</number>
         </property>
         <item>
-         <widget class="QPushButton" name="btn_fence_27">
+         <widget class="QPushButton" name="btn_fence_v20">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1099,7 +1099,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_28">
+         <widget class="QPushButton" name="btn_fence_v21">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1141,7 +1141,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_29">
+         <widget class="QPushButton" name="btn_fence_v22">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1183,7 +1183,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_30">
+         <widget class="QPushButton" name="btn_fence_v23">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1225,7 +1225,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_31">
+         <widget class="QPushButton" name="btn_fence_v24">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1267,7 +1267,7 @@ background-color: rgba(0, 255, 0, 12);</string>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="btn_fence_32">
+         <widget class="QPushButton" name="btn_fence_v25">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
             <horstretch>0</horstretch>
@@ -1324,7 +1324,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           <number>0</number>
          </property>
          <item>
-          <widget class="QPushButton" name="btn_fence_33">
+          <widget class="QPushButton" name="btn_fence_h30">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1347,7 +1347,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_34">
+          <widget class="QPushButton" name="btn_fence_h31">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -1376,7 +1376,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_35">
+          <widget class="QPushButton" name="btn_fence_h32">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1399,7 +1399,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_36">
+          <widget class="QPushButton" name="btn_fence_h33">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
@@ -1422,7 +1422,7 @@ background-color: rgba(0, 255, 0, 12);</string>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btn_fence_37">
+          <widget class="QPushButton" name="btn_fence_h34">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
