--- a/Agricola_Front/MyQRC.qrc
+++ b/Agricola_Front/MyQRC.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>images/fence_h_3.png</file>
+    <file>images/fence_v_3.png</file>
     <file>images/fence_h_0.png</file>
     <file>images/fence_h_1.png</file>
     <file>images/fence_h_2.png</file>
