--- a/Agricola_Front/data/PersonalField/mycard_big.ui
+++ b/Agricola_Front/data/PersonalField/mycard_big.ui
@@ -12,14 +12,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>536</width>
-    <height>540</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>536</width>
-    <height>540</height>
+    <width>9999999</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
